// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  position: relative;
  font-weight: 700;
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.5rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
}

.c2 {
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<body>
    <div>
      <section
        class="c0"
        role="card"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit amet consectetur.
        </header>
        <div
          class="c2"
          role="card-body"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. A in libero accusantium sunt dolore repellat molestiae animi quod, cum dicta, quis rem fugiat harum quasi hic tempora aliquid! Aperiam, consectetur. Quisquam fuga eveniet et molestias beatae excepturi eaque porro officia! Veritatis, necessitatibus quam quibusdam officiis quia tempora quidem voluptas, nihil ipsam reprehenderit, veniam accusantium. Rerum obcaecati dolorum doloremque quod illum. Doloremque optio debitis enim nam unde quod ducimus, nesciunt obcaecati aspernatur aliquam consectetur a provident aliquid quasi officia cupiditate rerum necessitatibus distinctio blanditiis incidunt amet hic cum dolorum assumenda? Recusandae! Ipsa et, esse enim quae laudantium placeat sequi nisi est consectetur omnis. Ducimus, vitae fuga? Dolorem dolor, qui nisi laudantium tenetur totam id quisquam voluptatem maxime molestiae libero provident commodi?
        </div>
        <footer
          class="c3"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet.
        </footer>
      </section>
    </div>
  </body>,
  "container": .c1 {
  position: relative;
  font-weight: 700;
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.5rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
}

.c2 {
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
    <section
      class="c0"
      role="card"
    >
      <header
        class="c1"
        role="card-header"
      >
        Lorem ipsum dolor sit amet consectetur.
      </header>
      <div
        class="c2"
        role="card-body"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. A in libero accusantium sunt dolore repellat molestiae animi quod, cum dicta, quis rem fugiat harum quasi hic tempora aliquid! Aperiam, consectetur. Quisquam fuga eveniet et molestias beatae excepturi eaque porro officia! Veritatis, necessitatibus quam quibusdam officiis quia tempora quidem voluptas, nihil ipsam reprehenderit, veniam accusantium. Rerum obcaecati dolorum doloremque quod illum. Doloremque optio debitis enim nam unde quod ducimus, nesciunt obcaecati aspernatur aliquam consectetur a provident aliquid quasi officia cupiditate rerum necessitatibus distinctio blanditiis incidunt amet hic cum dolorum assumenda? Recusandae! Ipsa et, esse enim quae laudantium placeat sequi nisi est consectetur omnis. Ducimus, vitae fuga? Dolorem dolor, qui nisi laudantium tenetur totam id quisquam voluptatem maxime molestiae libero provident commodi?
      </div>
      <footer
        class="c3"
        role="card-footer"
      >
        Lorem ipsum dolor sit amet.
      </footer>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Card Basic render in dark mode 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  position: relative;
  font-weight: 700;
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  width: 100%;
}

.c3 {
  display: none;
  position: absolute;
  height: 2.5rem;
  width: 2.5rem;
  top: 0;
  right: 0;
}

.c4 {
  height: 1.25rem;
  width: 1.25rem;
  top: 0.5rem;
  right: 0.5rem;
  position: absolute;
  color: hsla(0,0%,45%,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(217,33%,17%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(210,40%,96%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
}

.c0:hover .c2 {
  display: block;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.5rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
}

.c5 {
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<body>
    <div>
      <section
        class="c0"
        role="card"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit amet consectetur.
          <a
            class="c2 c3"
            href="https://google.com"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="c4"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
        </header>
        <div
          class="c5"
          role="card-body"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. A in libero accusantium sunt dolore repellat molestiae animi quod, cum dicta, quis rem fugiat harum quasi hic tempora aliquid! Aperiam, consectetur. Quisquam fuga eveniet et molestias beatae excepturi eaque porro officia! Veritatis, necessitatibus quam quibusdam officiis quia tempora quidem voluptas, nihil ipsam reprehenderit, veniam accusantium. Rerum obcaecati dolorum doloremque quod illum. Doloremque optio debitis enim nam unde quod ducimus, nesciunt obcaecati aspernatur aliquam consectetur a provident aliquid quasi officia cupiditate rerum necessitatibus distinctio blanditiis incidunt amet hic cum dolorum assumenda? Recusandae! Ipsa et, esse enim quae laudantium placeat sequi nisi est consectetur omnis. Ducimus, vitae fuga? Dolorem dolor, qui nisi laudantium tenetur totam id quisquam voluptatem maxime molestiae libero provident commodi?
        </div>
        <footer
          class="c6"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet.
        </footer>
      </section>
    </div>
  </body>,
  "container": .c1 {
  position: relative;
  font-weight: 700;
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  width: 100%;
}

.c3 {
  display: none;
  position: absolute;
  height: 2.5rem;
  width: 2.5rem;
  top: 0;
  right: 0;
}

.c4 {
  height: 1.25rem;
  width: 1.25rem;
  top: 0.5rem;
  right: 0.5rem;
  position: absolute;
  color: hsla(0,0%,45%,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(217,33%,17%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(210,40%,96%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
}

.c0:hover .c2 {
  display: block;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.5rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
}

.c5 {
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
    <section
      class="c0"
      role="card"
    >
      <header
        class="c1"
        role="card-header"
      >
        Lorem ipsum dolor sit amet consectetur.
        <a
          class="c2 c3"
          href="https://google.com"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c4"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </a>
      </header>
      <div
        class="c5"
        role="card-body"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. A in libero accusantium sunt dolore repellat molestiae animi quod, cum dicta, quis rem fugiat harum quasi hic tempora aliquid! Aperiam, consectetur. Quisquam fuga eveniet et molestias beatae excepturi eaque porro officia! Veritatis, necessitatibus quam quibusdam officiis quia tempora quidem voluptas, nihil ipsam reprehenderit, veniam accusantium. Rerum obcaecati dolorum doloremque quod illum. Doloremque optio debitis enim nam unde quod ducimus, nesciunt obcaecati aspernatur aliquam consectetur a provident aliquid quasi officia cupiditate rerum necessitatibus distinctio blanditiis incidunt amet hic cum dolorum assumenda? Recusandae! Ipsa et, esse enim quae laudantium placeat sequi nisi est consectetur omnis. Ducimus, vitae fuga? Dolorem dolor, qui nisi laudantium tenetur totam id quisquam voluptatem maxime molestiae libero provident commodi?
      </div>
      <footer
        class="c6"
        role="card-footer"
      >
        Lorem ipsum dolor sit amet.
      </footer>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Card Card divided 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  position: relative;
  font-weight: 700;
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  width: 100%;
  border-bottom: 1px solid hsla(214,32%,91%,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.5rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
  border-top: 1px solid hsla(214,32%,91%,1);
}

.c2 {
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<body>
    <div>
      <section
        class="c0"
        role="card"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit.
        </header>
        <div
          class="c2"
          role="card-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, voluptatibus dolorum! Quas, natus! Est, neque deserunt consequatur voluptatum dolores quae! Error explicabo omnis odio molestias.
        </div>
        <footer
          class="c3"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet consectetur.
        </footer>
      </section>
      <section
        class="c4"
        role="card"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit.
        </header>
        <div
          class="c2"
          role="card-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, voluptatibus dolorum! Quas, natus! Est, neque deserunt consequatur voluptatum dolores quae! Error explicabo omnis odio molestias.
        </div>
        <footer
          class="c3"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet consectetur.
        </footer>
      </section>
    </div>
  </body>,
  "container": .c1 {
  position: relative;
  font-weight: 700;
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  width: 100%;
  border-bottom: 1px solid hsla(214,32%,91%,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.5rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
  border-top: 1px solid hsla(214,32%,91%,1);
}

.c2 {
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
    <section
      class="c0"
      role="card"
    >
      <header
        class="c1"
        role="card-header"
      >
        Lorem ipsum dolor sit.
      </header>
      <div
        class="c2"
        role="card-body"
      >
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, voluptatibus dolorum! Quas, natus! Est, neque deserunt consequatur voluptatum dolores quae! Error explicabo omnis odio molestias.
      </div>
      <footer
        class="c3"
        role="card-footer"
      >
        Lorem ipsum dolor sit amet consectetur.
      </footer>
    </section>
    <section
      class="c4"
      role="card"
    >
      <header
        class="c1"
        role="card-header"
      >
        Lorem ipsum dolor sit.
      </header>
      <div
        class="c2"
        role="card-body"
      >
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, voluptatibus dolorum! Quas, natus! Est, neque deserunt consequatur voluptatum dolores quae! Error explicabo omnis odio molestias.
      </div>
      <footer
        class="c3"
        role="card-footer"
      >
        Lorem ipsum dolor sit amet consectetur.
      </footer>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Card Card with accent variants 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  position: relative;
  font-weight: 700;
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  width: 100%;
}

.c3 {
  display: none;
  position: absolute;
  height: 2.5rem;
  width: 2.5rem;
  top: 0;
  right: 0;
}

.c4 {
  height: 1.25rem;
  width: 1.25rem;
  top: 0.5rem;
  right: 0.5rem;
  position: absolute;
  color: hsla(0,0%,64%,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(271,81%,56%,1);
}

.c0:hover .c2 {
  display: block;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(333,71%,51%,1);
}

.c7:hover .c2 {
  display: block;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(0,0%,32%,1);
}

.c8:hover .c2 {
  display: block;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(221,83%,53%,1);
}

.c9:hover .c2 {
  display: block;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(142,76%,36%,1);
}

.c10:hover .c2 {
  display: block;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(32,95%,44%,1);
}

.c11:hover .c2 {
  display: block;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(0,72%,51%,1);
}

.c12:hover .c2 {
  display: block;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.5rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
}

.c5 {
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<body>
    <div>
      <section
        class="c0"
        role="card"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit amet.
          <a
            class="c2 c3"
            href="https://google.com"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="c4"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
        </header>
        <div
          class="c5"
          role="card-body"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
        </div>
        <footer
          class="c6"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet consectetur.
        </footer>
      </section>
      <section
        class="c7"
        role="card"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit amet.
          <a
            class="c2 c3"
            href="https://google.com"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="c4"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
        </header>
        <div
          class="c5"
          role="card-body"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
        </div>
        <footer
          class="c6"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet consectetur.
        </footer>
      </section>
      <section
        class="c8"
        role="card"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit amet.
          <a
            class="c2 c3"
            href="https://google.com"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="c4"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
        </header>
        <div
          class="c5"
          role="card-body"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
        </div>
        <footer
          class="c6"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet consectetur.
        </footer>
      </section>
      <section
        class="c9"
        role="card"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit amet.
          <a
            class="c2 c3"
            href="https://google.com"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="c4"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
        </header>
        <div
          class="c5"
          role="card-body"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
        </div>
        <footer
          class="c6"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet consectetur.
        </footer>
      </section>
      <section
        class="c10"
        role="card"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit amet.
          <a
            class="c2 c3"
            href="https://google.com"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="c4"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
        </header>
        <div
          class="c5"
          role="card-body"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
        </div>
        <footer
          class="c6"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet consectetur.
        </footer>
      </section>
      <section
        class="c11"
        role="card"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit amet.
          <a
            class="c2 c3"
            href="https://google.com"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="c4"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
        </header>
        <div
          class="c5"
          role="card-body"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
        </div>
        <footer
          class="c6"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet consectetur.
        </footer>
      </section>
      <section
        class="c12"
        role="card"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit amet.
          <a
            class="c2 c3"
            href="https://google.com"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="c4"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
        </header>
        <div
          class="c5"
          role="card-body"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
        </div>
        <footer
          class="c6"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet consectetur.
        </footer>
      </section>
    </div>
  </body>,
  "container": .c1 {
  position: relative;
  font-weight: 700;
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  width: 100%;
}

.c3 {
  display: none;
  position: absolute;
  height: 2.5rem;
  width: 2.5rem;
  top: 0;
  right: 0;
}

.c4 {
  height: 1.25rem;
  width: 1.25rem;
  top: 0.5rem;
  right: 0.5rem;
  position: absolute;
  color: hsla(0,0%,64%,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(271,81%,56%,1);
}

.c0:hover .c2 {
  display: block;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(333,71%,51%,1);
}

.c7:hover .c2 {
  display: block;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(0,0%,32%,1);
}

.c8:hover .c2 {
  display: block;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(221,83%,53%,1);
}

.c9:hover .c2 {
  display: block;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(142,76%,36%,1);
}

.c10:hover .c2 {
  display: block;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(32,95%,44%,1);
}

.c11:hover .c2 {
  display: block;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
  border-top: 2px solid hsla(0,72%,51%,1);
}

.c12:hover .c2 {
  display: block;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.5rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
}

.c5 {
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
    <section
      class="c0"
      role="card"
    >
      <header
        class="c1"
        role="card-header"
      >
        Lorem ipsum dolor sit amet.
        <a
          class="c2 c3"
          href="https://google.com"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c4"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </a>
      </header>
      <div
        class="c5"
        role="card-body"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
      </div>
      <footer
        class="c6"
        role="card-footer"
      >
        Lorem ipsum dolor sit amet consectetur.
      </footer>
    </section>
    <section
      class="c7"
      role="card"
    >
      <header
        class="c1"
        role="card-header"
      >
        Lorem ipsum dolor sit amet.
        <a
          class="c2 c3"
          href="https://google.com"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c4"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </a>
      </header>
      <div
        class="c5"
        role="card-body"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
      </div>
      <footer
        class="c6"
        role="card-footer"
      >
        Lorem ipsum dolor sit amet consectetur.
      </footer>
    </section>
    <section
      class="c8"
      role="card"
    >
      <header
        class="c1"
        role="card-header"
      >
        Lorem ipsum dolor sit amet.
        <a
          class="c2 c3"
          href="https://google.com"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c4"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </a>
      </header>
      <div
        class="c5"
        role="card-body"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
      </div>
      <footer
        class="c6"
        role="card-footer"
      >
        Lorem ipsum dolor sit amet consectetur.
      </footer>
    </section>
    <section
      class="c9"
      role="card"
    >
      <header
        class="c1"
        role="card-header"
      >
        Lorem ipsum dolor sit amet.
        <a
          class="c2 c3"
          href="https://google.com"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c4"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </a>
      </header>
      <div
        class="c5"
        role="card-body"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
      </div>
      <footer
        class="c6"
        role="card-footer"
      >
        Lorem ipsum dolor sit amet consectetur.
      </footer>
    </section>
    <section
      class="c10"
      role="card"
    >
      <header
        class="c1"
        role="card-header"
      >
        Lorem ipsum dolor sit amet.
        <a
          class="c2 c3"
          href="https://google.com"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c4"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </a>
      </header>
      <div
        class="c5"
        role="card-body"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
      </div>
      <footer
        class="c6"
        role="card-footer"
      >
        Lorem ipsum dolor sit amet consectetur.
      </footer>
    </section>
    <section
      class="c11"
      role="card"
    >
      <header
        class="c1"
        role="card-header"
      >
        Lorem ipsum dolor sit amet.
        <a
          class="c2 c3"
          href="https://google.com"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c4"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </a>
      </header>
      <div
        class="c5"
        role="card-body"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
      </div>
      <footer
        class="c6"
        role="card-footer"
      >
        Lorem ipsum dolor sit amet consectetur.
      </footer>
    </section>
    <section
      class="c12"
      role="card"
    >
      <header
        class="c1"
        role="card-header"
      >
        Lorem ipsum dolor sit amet.
        <a
          class="c2 c3"
          href="https://google.com"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c4"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </a>
      </header>
      <div
        class="c5"
        role="card-body"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis adipisci enim ipsam temporibus molestiae dolor veniam repellendus tempora. Sit consequuntur ratione quam. Dolor quo quis enim ipsum praesentium repudiandae.
      </div>
      <footer
        class="c6"
        role="card-footer"
      >
        Lorem ipsum dolor sit amet consectetur.
      </footer>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Card Card with sharp corners 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  position: relative;
  font-weight: 700;
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.5rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
}

.c2 {
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<body>
    <div>
      <section
        class="c0"
        role="card"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit amet consectetur.
        </header>
        <div
          class="c2"
          role="card-body"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. A in libero accusantium sunt dolore repellat molestiae animi quod, cum dicta, quis rem fugiat harum quasi hic tempora aliquid! Aperiam, consectetur. Quisquam fuga eveniet et molestias beatae excepturi eaque porro officia! Veritatis, necessitatibus quam quibusdam officiis quia tempora quidem voluptas, nihil ipsam reprehenderit, veniam accusantium. Rerum obcaecati dolorum doloremque quod illum. Doloremque optio debitis enim nam unde quod ducimus, nesciunt obcaecati aspernatur aliquam consectetur a provident aliquid quasi officia cupiditate rerum necessitatibus distinctio blanditiis incidunt amet hic cum dolorum assumenda? Recusandae! Ipsa et, esse enim quae laudantium placeat sequi nisi est consectetur omnis. Ducimus, vitae fuga? Dolorem dolor, qui nisi laudantium tenetur totam id quisquam voluptatem maxime molestiae libero provident commodi?
        </div>
        <footer
          class="c3"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet.
        </footer>
      </section>
    </div>
  </body>,
  "container": .c1 {
  position: relative;
  font-weight: 700;
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.5rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
}

.c2 {
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
    <section
      class="c0"
      role="card"
    >
      <header
        class="c1"
        role="card-header"
      >
        Lorem ipsum dolor sit amet consectetur.
      </header>
      <div
        class="c2"
        role="card-body"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. A in libero accusantium sunt dolore repellat molestiae animi quod, cum dicta, quis rem fugiat harum quasi hic tempora aliquid! Aperiam, consectetur. Quisquam fuga eveniet et molestias beatae excepturi eaque porro officia! Veritatis, necessitatibus quam quibusdam officiis quia tempora quidem voluptas, nihil ipsam reprehenderit, veniam accusantium. Rerum obcaecati dolorum doloremque quod illum. Doloremque optio debitis enim nam unde quod ducimus, nesciunt obcaecati aspernatur aliquam consectetur a provident aliquid quasi officia cupiditate rerum necessitatibus distinctio blanditiis incidunt amet hic cum dolorum assumenda? Recusandae! Ipsa et, esse enim quae laudantium placeat sequi nisi est consectetur omnis. Ducimus, vitae fuga? Dolorem dolor, qui nisi laudantium tenetur totam id quisquam voluptatem maxime molestiae libero provident commodi?
      </div>
      <footer
        class="c3"
        role="card-footer"
      >
        Lorem ipsum dolor sit amet.
      </footer>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Card card with link 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  position: relative;
  font-weight: 700;
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.5rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
}

.c2 {
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<body>
    <div>
      <section
        class="c0"
        role="card"
      >
        <a
          href="https://google.com"
        >
          <header
            class="c1"
            role="card-header"
          >
            Lorem ipsum dolor sit amet consectetur.
          </header>
          <div
            class="c2"
            role="card-body"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. A in libero accusantium sunt dolore repellat molestiae animi quod, cum dicta, quis rem fugiat harum quasi hic tempora aliquid! Aperiam, consectetur. Quisquam fuga eveniet et molestias beatae excepturi eaque porro officia! Veritatis, necessitatibus quam quibusdam officiis quia tempora quidem voluptas, nihil ipsam reprehenderit, veniam accusantium. Rerum obcaecati dolorum doloremque quod illum. Doloremque optio debitis enim nam unde quod ducimus, nesciunt obcaecati aspernatur aliquam consectetur a provident aliquid quasi officia cupiditate rerum necessitatibus distinctio blanditiis incidunt amet hic cum dolorum assumenda? Recusandae! Ipsa et, esse enim quae laudantium placeat sequi nisi est consectetur omnis. Ducimus, vitae fuga? Dolorem dolor, qui nisi laudantium tenetur totam id quisquam voluptatem maxime molestiae libero provident commodi?
          </div>
          <footer
            class="c3"
            role="card-footer"
          >
            Lorem ipsum dolor sit amet.
          </footer>
        </a>
      </section>
    </div>
  </body>,
  "container": .c1 {
  position: relative;
  font-weight: 700;
  padding-top: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,100%,100%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  color: hsla(217,33%,17%,1);
  margin-bottom: 1.875rem;
  border-radius: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.5rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
}

.c2 {
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
    <section
      class="c0"
      role="card"
    >
      <a
        href="https://google.com"
      >
        <header
          class="c1"
          role="card-header"
        >
          Lorem ipsum dolor sit amet consectetur.
        </header>
        <div
          class="c2"
          role="card-body"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. A in libero accusantium sunt dolore repellat molestiae animi quod, cum dicta, quis rem fugiat harum quasi hic tempora aliquid! Aperiam, consectetur. Quisquam fuga eveniet et molestias beatae excepturi eaque porro officia! Veritatis, necessitatibus quam quibusdam officiis quia tempora quidem voluptas, nihil ipsam reprehenderit, veniam accusantium. Rerum obcaecati dolorum doloremque quod illum. Doloremque optio debitis enim nam unde quod ducimus, nesciunt obcaecati aspernatur aliquam consectetur a provident aliquid quasi officia cupiditate rerum necessitatibus distinctio blanditiis incidunt amet hic cum dolorum assumenda? Recusandae! Ipsa et, esse enim quae laudantium placeat sequi nisi est consectetur omnis. Ducimus, vitae fuga? Dolorem dolor, qui nisi laudantium tenetur totam id quisquam voluptatem maxime molestiae libero provident commodi?
        </div>
        <footer
          class="c3"
          role="card-footer"
        >
          Lorem ipsum dolor sit amet.
        </footer>
      </a>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
